case2/wc_styles.css
@charset "utf-8";

/*
   New Perspectives on HTML5 and CSS3, 7th Edition
   Tutorial 5
   Case Problem 2
   
   Author:   brandon santizo
   Date:    10/31/19   
   
   Filename: wc_styles.css

   This file contains the layout styles and media
   queries used with sample pages from the Willet
   Creek Golf Course website.

*/


/* Import Design Styles */
/*step 3*/
@import url("wc_designs.css");

/* Flex Layout Styles */
/*step 4*/
body{
   display: -webkit-flex;
   display: flex;
   -webkit-flex-box: row wrap;
   flex-flow: row wrap;
}
/*step 5*/
nav.horizontal{
   -webkit-flex: 1 3 140px;
   flex: 1 3 140px;
}
nav#hole_list{
   -webkit-flex: 1 3 140px;
   flex: 1 3 140px;
}
/*step 6*/
article{
   -webkit-flex: 3 1 341px;
   flex: 3 1 341px;
}
/*step 7*/
article{
   display: -webkit-flex;
   display: flex;
   -webkit-flex-box: row wrap;
   flex-flow: row wrap;
}
/*step 8*/
section#stats{
   -webkit-flex: 1 4 120px;
   flex: 1 4 120px;
}
/*step 9*/
section#summary{
   -webkit-flex: 4 1 361px;
   flex: 4 1 361px;
}
/*step 10*/
aside{
   display: -webkit-flex;
   display: flex;
   -webkit-flex-box: row wrap;
   flex-flow: row wrap;
}
/*step 11*/
aside div{
   -webkit-flex: 1 1 180px;
   flex: 1 1 180px;
}

/* =============================
	Mobile Styles: 0 - 480 pixels
   =============================
*/
/*step 12*/
@media only screen and (max-width: 480px){

   nav.hole_list{
      order: 99;
   }
   footer{
      order: 100;
   }
   nav.horizontal ul{
      display: none;
   }
   a#navicon:hover+ul, nav.horizontal ul:hover{
      display: block;
   }
   aside{
      display: none;
   }

}




/* =================================================
	Tablet and Desktop Styles: 481 pixels and greater
   =================================================
*/
/*step 16*/
@media only screen and (min-width: 481px){
   a#navicon{
      display: none;
   }
   nav.horizontal ul{
      display: -webkit-flex;
      display: flex;
      -webkit-flex-box: row nowrap;
      flex-flow: row nowrap;
   }
   nav.horizontal ul{
      -webkit-flex: 1 1 auto;
      flex: 1 1 auto;
   }

}

